ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"acme.cert-manager.io/http01-edit-in-place":"true","cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"traefik","relic-wielder.com/battle-retry":"1","traefik.ingress.kubernetes.io/router.entrypoints":"websecure"},"name":"pireborn-ingress-dev","namespace":"default"},"spec":{"rules":[{"host":"dev.aaronescoto.com","http":{"paths":[{"backend":{"service":{"name":"pireborn","port":{"nu [...]
    kubernetes.io/ingress.class: traefik
    relic-wielder.com/battle-retry: "1"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  creationTimestamp: "2025-04-17T21:40:40Z"
  generation: 4
  name: pireborn-ingress-dev
  namespace: default
  resourceVersion: "51685573"
  uid: 0ac68219-2585-40bc-a546-67d45fc9f8b7
spec:
  ingressClassName: traefik
  rules:
  - host: dev.aaronescoto.com
    http:
      paths:
      - backend:
          service:
            name: pireborn
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - dev.aaronescoto.com
    secretName: pireborn-dev-tls
status:
  loadBalancer:
    ingress:
    - ip: 10.0.0.137
    - ip: 10.0.0.139
