traefik-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
  labels:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
spec:
  type: NodePort
  externalIPs:
    - 10.0.0.137
    - 10.0.0.61
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  ports:
    - name: web
      port: 80
      targetPort: web
      nodePort: 30080
      protocol: TCP
    - name: websecure
      port: 443
      targetPort: websecure
      nodePort: 30443
      protocol: TCP
